[package]
name = "espcash"
version = "0.1.0"
authors = ["Ethan Tuttle <tuttle.ethan@protonmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = "=0.48.1"
embedded-svc = "=0.27.1"
anyhow = "=1.0.79"
heapless = "0.8.0"
rgb = "0.8.29"
url = "2.5.0"
moksha-core = { version = "0.2.1", path = "../moksha/moksha-core" }
moksha-wallet = { path = "../moksha/moksha-wallet" }
# moksha-wallet = { git = "https://github.com/EthnTuttle/moksha", rev = "0ccb60f" }

[build-dependencies]
embuild = "0.31.3"
toml-cfg = "0.2.0"

[dev-dependencies]
